hphp/hack/test/typecheck/const_in_interface_overridden2_bad.php
<?hh

interface I1 {
  const int SOME_CONST = 1;
}
interface I2 extends I1 {
  const int SOME_CONST = 2;
}
